<resources>
    <string name="app_name">Movie App</string>
    <string name="text_view_recommend">RECOMMENDED</string>
    <string name="text_view_movie_name">Movie Name</string>
    <string name="text_view_total_votes">Total Votes</string>
    <string name="text_view_tv_shows">TV SHOWS</string>
    <string name="text_shows_movie_name">SHOWS MOVIE NAME</string>
    <string name="text_view_votes">VOTES</string>

</resources>
